
INCLUDES = \
	-I../../../../../tufsbox/cdkroot/usr/include \
	-I../../../../../tufsbox/cdkroot/usr/include/glib-2.0 \
	-I../../../../../tufsbox/cdkroot/usr/include/gstreamer-1.0 \
	-I../../../../../tufsbox/cdkroot/usr/include/libxml2 \
	-I../../../../../tufsbox/cdkroot/usr/lib/glib-2.0/include

bin_PROGRAMS = eplayer4
eplayer4_SOURCES = eplayer4.c
eplayer4_LDADD = -lgstreamer-1.0

